--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             color: var(--accent); 
         }
         
-        /* Hero Section con TU imagen específica */
+        /* Hero Section con TU imagen específica de manos sosteniendo paquete */
         .hero { 
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
                        url('https://image.shutterstock.com/image-photo/hands-holding-brown-paper-box-260nw-2491116697.jpg') 
@@ -312,12 +312,12 @@
             line-height: 1.6;
         }
         
-        /* Nueva imagen TU para Quiénes Somos */
+        /* Nueva imagen TU para Quiénes Somos - MASTER SHIPPING */
         .about-image { 
             background-color: #ddd; 
             height: clamp(300px, 50vw, 500px); 
             border-radius: 12px; 
-            background-image: url('https://image.shutterstock.com/image-photo/courier-delivering-parcel-package-customer-260nw-2521189327.jpg');
+            background-image: url('https://raw.githubusercontent.com/cubadirectourtravel-stack/cubadirect-website/main/images%20(9).jpg');
             background-size: cover; 
             background-position: center; 
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
